--- a/Solution/ActivityLauncher.Client/Locales/ActivityLocales.fr.resx
+++ b/Solution/ActivityLauncher.Client/Locales/ActivityLocales.fr.resx
@@ -354,4 +354,22 @@
   <data name="Activity.Dialog.View.LastModifiedDate" xml:space="preserve">
     <value>Modifiée {0}</value>
   </data>
+  <data name="Activity.Dialog.Task.ExplorerFolderTask.DirectoryPath.Empty" xml:space="preserve">
+    <value>Aucun dossier renseigné.</value>
+  </data>
+  <data name="Activity.Dialog.Task.ExplorerFolderTask.DirectoryPath.Label" xml:space="preserve">
+    <value>Dossier à ouvrir</value>
+  </data>
+  <data name="Activity.Dialog.Task.ScriptTask.Script.Empty" xml:space="preserve">
+    <value>Aucun script renseigné.</value>
+  </data>
+  <data name="Activity.Dialog.Task.ScriptTask.Script.Label" xml:space="preserve">
+    <value>Script PowerShell</value>
+  </data>
+  <data name="Activity.Dialog.Task.VSCodeTask.DirectoryPath.Empty" xml:space="preserve">
+    <value>Aucun espace de travail renseigné.</value>
+  </data>
+  <data name="Activity.Dialog.Task.VSCodeTask.DirectoryPath.Label" xml:space="preserve">
+    <value>Dossier de l'espace de travail</value>
+  </data>
 </root>
