--- a/Solution/ActivityLauncher.Client/Locales/ActivityLocales.en.resx
+++ b/Solution/ActivityLauncher.Client/Locales/ActivityLocales.en.resx
@@ -360,6 +360,12 @@
   <data name="Activity.Dialog.Task.ExplorerFolderTask.DirectoryPath.Label" xml:space="preserve">
     <value>Folder to open</value>
   </data>
+  <data name="Activity.Dialog.Task.OpenFileTask.FilePath.Empty" xml:space="preserve">
+    <value>No file entered.</value>
+  </data>
+  <data name="Activity.Dialog.Task.OpenFileTask.FilePath.Label" xml:space="preserve">
+    <value>File to open</value>
+  </data>
   <data name="Activity.Dialog.Task.ScriptTask.Script.Empty" xml:space="preserve">
     <value>No script entered.</value>
   </data>
@@ -371,5 +377,14 @@
   </data>
   <data name="Activity.Dialog.Task.VSCodeTask.DirectoryPath.Label" xml:space="preserve">
     <value>Workspace folder</value>
+  </data>
+  <data name="Activity.Dialog.Tasks.NavList.AllTasks" xml:space="preserve">
+    <value>All</value>
+  </data>
+  <data name="Activity.Dialog.Tasks.NavList.TasksLabel" xml:space="preserve">
+    <value>Tasks</value>
+  </data>
+  <data name="Activity.Dialog.Tasks.NavList.Title" xml:space="preserve">
+    <value>Tasks Selection</value>
   </data>
 </root>
