--- a/Solution/ActivityLauncher.Client/Locales/ActivityLocales.fr.resx
+++ b/Solution/ActivityLauncher.Client/Locales/ActivityLocales.fr.resx
@@ -190,7 +190,7 @@
     <value>Supprimer l'activité</value>
   </data>
   <data name="Activity.Dialog.Description.Label" xml:space="preserve">
-    <value>Description</value>
+    <value>Description de l'activité</value>
   </data>
   <data name="Activity.Dialog.Edit.SubmitButton" xml:space="preserve">
     <value>Sauvegarder</value>
@@ -199,7 +199,7 @@
     <value>Modifier l'activité</value>
   </data>
   <data name="Activity.Dialog.Name.Label" xml:space="preserve">
-    <value>Nom</value>
+    <value>Nom de l'activité</value>
   </data>
   <data name="Activity.Dialog.Name.RequiredError" xml:space="preserve">
     <value>L'activité doit avoir un nom !</value>
@@ -238,7 +238,7 @@
     <value>Modifier l'activité</value>
   </data>
   <data name="Activity.Dialog.View.Description.Title" xml:space="preserve">
-    <value>Description</value>
+    <value>Description de l'activité</value>
   </data>
   <data name="Activity.Dialog.Tasks.AddTask" xml:space="preserve">
     <value>Ajouter une tâche</value>
@@ -313,7 +313,7 @@
     <value>Nouvelle tâche {0}</value>
   </data>
   <data name="Activity.Dialog.Task.Name.Label" xml:space="preserve">
-    <value>Nom</value>
+    <value>Nom de la tâche</value>
   </data>
   <data name="Activity.Dialog.Task.Name.RequiredError" xml:space="preserve">
     <value>La tâche doit avoir un nom !</value>
@@ -386,5 +386,38 @@
   </data>
   <data name="Activity.Dialog.Tasks.NavList.Title" xml:space="preserve">
     <value>Selection tâches</value>
+  </data>
+  <data name="Activity.Dialog.Edit.FormError" xml:space="preserve">
+    <value>Une ou plusieurs erreurs ont été détectées, veuillez vérifier le contenu de l'activité avant de sauvegarder.</value>
+  </data>
+  <data name="Activity.Dialog.Task.TerminalTask.AddTerminalTabButton" xml:space="preserve">
+    <value>Ajouter un onglet de terminal</value>
+  </data>
+  <data name="Activity.Dialog.Task.TerminalTask.DefaultTabTitle" xml:space="preserve">
+    <value>Onglet {0}</value>
+  </data>
+  <data name="Activity.Dialog.Task.TerminalTask.TerminalTab.Color.Empty" xml:space="preserve">
+    <value>Aucune couleur d'onglet renseignée</value>
+  </data>
+  <data name="Activity.Dialog.Task.TerminalTask.TerminalTab.Color.Label" xml:space="preserve">
+    <value>Couleur de l'onglet</value>
+  </data>
+  <data name="Activity.Dialog.Task.TerminalTask.TerminalTab.Command.Empty" xml:space="preserve">
+    <value>Aucune commande initiale renseignée</value>
+  </data>
+  <data name="Activity.Dialog.Task.TerminalTask.TerminalTab.Command.Label" xml:space="preserve">
+    <value>Commande initiale</value>
+  </data>
+  <data name="Activity.Dialog.Task.TerminalTask.TerminalTab.LocationPath.Empty" xml:space="preserve">
+    <value>Aucun repertoire de travail renseigné</value>
+  </data>
+  <data name="Activity.Dialog.Task.TerminalTask.TerminalTab.LocationPath.Label" xml:space="preserve">
+    <value>Repertoire de travail</value>
+  </data>
+  <data name="Activity.Dialog.Task.TerminalTask.TerminalTab.Title.Label" xml:space="preserve">
+    <value>Titre de l'onglet</value>
+  </data>
+  <data name="Activity.Dialog.Task.TerminalTask.TerminalTabs.Empty" xml:space="preserve">
+    <value>Aucun onglet n'a été ajouté.</value>
   </data>
 </root>
